# databricks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ralph_progress_QA_TEST_PLAN.json  .rat-apache  .rat-excludes  CLAUDE.md  CONTRIBUTING.md  GAP_ANALYSIS_SEA_METADATA.md  PHASE1_TEST_RESULTS.md  README.md  TASK_STATUS.md  TELEMETRY_TIMING_ISSUE.md  generated_task_specs.json  metadata_refactor.md
.bot/: SETUP.md  config.yaml  context-repos.yaml
.claude/: settings.json  settings.local.json  test-patterns.yaml
.github/: CODEOWNERS
bench/: index.html
csharp/: AdbcDrivers.Databricks.sln  Apache.Arrow.Adbc.Drivers.Databricks.sln  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  README.md  RELEASE_PROCESS.md
docs/: benchmark-cicd-setup.md  e2e-test-isolation-guidance.md
e2e-nightly/: index.html
go/: .env.windows  bulk_ingest.go  bulk_ingest_test.go  connection.go  database.go  database_test.go  driver.go  driver_test.go  go.mod  go.sum  integration_e2e_test.go  ipc_reader_adapter.go  ipc_reader_test.go  license.tpl  manifest.toml  pixi.toml  staging_client.go  staging_client_test.go  statement.go
rust/: CLAUDE.md  Cargo.toml  Makefile  NOTICE.txt  README.md  about.toml  generated_task_specs.json  license.tpl  manifest.toml  pixi.toml  test_oidc_api
rust-pyo3/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust-pyo3/examples/: alternating_bench.py  cloudfetch_breakdown.py  e2e_smoke.py  e2e_via_dbsql.py  inline_breakdown.py  perf_baseline.py  perf_baseline_v2.py  perf_breakdown.py
rust-pyo3/src/: lib.rs
test-infrastructure/: README.md
(+596 files in other folders)
