# Copyright (c) 2026 ADBC Drivers Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "databricks-adbc-pyo3"
version = "0.1.0"
edition = "2021"
authors = ["Databricks"]
license = "Apache-2.0"
description = "PyO3 Python bindings for the Databricks ADBC Rust kernel (POC)"

[lib]
name = "databricks_adbc_pyo3"
crate-type = ["cdylib"]

[dependencies]
databricks-adbc = { path = "../rust" }
adbc_core = "0.22"
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
arrow-array = "57"
arrow-schema = "57"
arrow-pyarrow = "57"
